--- a/src/shared/badge-product/badge-product.module.css
+++ b/src/shared/badge-product/badge-product.module.css
@@ -1,3 +1,39 @@
 .container {
   display: flex;
+  gap: 6px;
+  align-items: center;
+
+  /* justify-content: space-between; */
+
+  width: 100%;
+}
+
+.badgeImaContainer {
+  position: relative;
+  display: flex;
+  width: 200px;
+  height: 20px;
+}
+
+.badge {
+  display: flex;
+  align-items: center;
+  height: 100%;
+}
+
+.imgStandard {
+}
+
+.controlsList {
+  display: flex;
+  gap: 6px;
+}
+
+.control {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 32px;
+  height: 32px;
 }
