--- a/src/shared/badge-product/badge-product.module.css
+++ b/src/shared/badge-product/badge-product.module.css
@@ -1,10 +1,7 @@
 .container {
   display: flex;
+  flex-direction: column;
   gap: 6px;
-  align-items: center;
-
-  /* justify-content: space-between; */
-
   width: 100%;
 }
 
@@ -18,6 +15,7 @@
 .badge {
   display: flex;
   align-items: center;
+  width: 100%;
   height: 100%;
 }
 
@@ -27,6 +25,7 @@
 .controlsList {
   display: flex;
   gap: 6px;
+  width: 100%;
 }
 
 .control {
@@ -34,6 +33,20 @@
   align-items: center;
   justify-content: center;
 
-  width: 32px;
   height: 32px;
+
+  font-size: 16px;
+  color: #000;
+
+  background-color: #fff;
+  border-radius: 8px;
+}
+
+.add {
+  width: 100%;
+}
+
+.more {
+  flex-shrink: 0;
+  width: 32px;
 }
