feat: add category component

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,13 @@
     'Source Code Pro', 'Fira Mono', 'Droid Sans Mono', 'Courier New',
     monospace;
   --background-color: #121314;
+  --red: #d33832;
+  --red-hover: #ed5651;
+  --green: #1fa84e;
+  --green-hover: #32b760;
+  --grey: rgb(255 255 255 / 12%);
+  --grey-hover: rgb(255 255 255 / 32%);
+  --box-shadow-slight: #2d2e2e;
 }
 
 * {
@@ -18,6 +25,7 @@ html,
 body {
   overflow-x: hidden;
   max-width: 100vw;
+  color: #fff;
 }
 
 body {
@@ -30,8 +38,9 @@ a {
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+button {
+  cursor: pointer;
+  color: inherit;
+  background-color: transparent;
+  border: none;
 }
