--- a/src/views/home/categories-list/category/category.module.css
+++ b/src/views/home/categories-list/category/category.module.css
@@ -2,25 +2,16 @@
   display: flex;
   flex-direction: column;
   gap: 16px;
-}
-
-@media (width >= 768px) {
-  .container {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
-    grid-template-rows: minmax(200px, 1fr);
-  }
-}
-
-.category {
-  display: flex;
-  flex-direction: column;
 
   width: 100%;
   height: 500px;
 
   font-size: 32px;
 
-  border: 1px solid white;
   border-radius: 16px;
+}
+
+.h3 {
+  padding: 12px 0;
+  font-size: 32px;
 }
