--- a/src/shared/selected/selected.module.css
+++ b/src/shared/selected/selected.module.css
@@ -2,27 +2,72 @@
   display: flex;
   flex-direction: column;
   gap: 12px;
-  align-items: center;
   justify-content: center;
 
   min-height: 160px;
 
-  border: 1px solid #2d2e2e;
   border-radius: 16px;
 }
 
-.h1 {
-  font-size: 44px;
+.h2 {
+  padding: 12px 0;
+  font-size: 32px;
   font-weight: 700;
 }
 
-@media (width >= 768px) {
-  .h1 {
-    font-size: 52px;
-  }
+.wrapper {
+  display: flex;
+  gap: 12px;
+  width: 100%;
 }
 
-.description {
+.selected {
   display: flex;
+  flex-wrap: wrap;
+  gap: 2px;
+  align-items: flex-start;
+  justify-content: flex-start;
+
+  width: 100%;
+  padding: 24px;
+
   font-size: 32px;
+
+  /* border: 1px solid #2d2e2e; */
+  border: 1px solid rgb(47 54 61);
+  border-radius: 16px;
+}
+
+.imgStandard {
+  overflow: hidden;
+  height: 28px;
+}
+
+.controls {
+  display: flex;
+  flex-direction: column;
+  flex-shrink: 0;
+  gap: 12px;
+}
+
+.control {
+  cursor: pointer;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  padding: 16px;
+
+  background-color: var(--grey);
+  border-radius: 8px;
+}
+
+.clear {
+  /* box-shadow: var(--red) 0 0 0 2px; */
+  border: 2px solid var(--red);
+}
+
+.clear:hover {
+  background-color: var(--red-hover);
 }
