--- a/src/shared/hero/hero.module.css
+++ b/src/shared/hero/hero.module.css
@@ -1,11 +1,37 @@
 .container {
+  overflow: hidden;
   display: flex;
   flex-direction: column;
   gap: 12px;
   align-items: center;
   justify-content: center;
 
-  height: 360px;
+  height: 460px;
+}
+
+.heroImgContainer {
+  position: absolute;
+  z-index: -1;
+
+  overflow: hidden;
+
+  width: 100%;
+  height: 460px;
+
+  /* height: 100%; */
+
+  opacity: 0.15;
+}
+
+.heroImg {
+  overflow: hidden;
+  object-fit: cover;
+}
+
+.heroImgFilter {
+  position: absolute;
+  width: 100%;
+  height: 100%;
 }
 
 .h1 {
