--- a/src/shared/hero/hero.module.css
+++ b/src/shared/hero/hero.module.css
@@ -20,7 +20,7 @@
 
   /* height: 100%; */
 
-  opacity: 0.15;
+  opacity: 0.5;
 }
 
 .heroImg {
@@ -28,10 +28,24 @@
   object-fit: cover;
 }
 
-.heroImgFilter {
+.heroBottomShadow {
   position: absolute;
   width: 100%;
   height: 100%;
+  background: var(
+    --neutral-right-u-1,
+    linear-gradient(180deg, rgb(18 19 20 / 50%) 0%, #121314 100%)
+  );
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  align-items: center;
+  justify-content: center;
+
+  margin-top: 96px;
 }
 
 .h1 {
