--- a/src/shared/home-stats/home-stats.module.css
+++ b/src/shared/home-stats/home-stats.module.css
@@ -3,7 +3,6 @@
   flex-direction: column;
   gap: 12px;
   padding-top: 24px;
-  /* margin-bottom: 20px; */
 }
 
 .main {
@@ -13,44 +12,58 @@
 
 .link {
   position: relative;
-  height: 100px;
-  width: 100px;
   z-index: 5;
-  /* background: #121314; */
+
   overflow: hidden;
-  border-radius: 8px;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
+
+  width: 100px;
+  height: 100px;
+
   border-style: solid;
   border-width: 1px;
+  border-radius: 8px;
 }
 
-@media (min-width: 768px) {
+@media (width >= 768px) {
   .link {
     width: 140px;
     height: 140px;
-    border-radius: 16px;
     border-width: 2px;
+    border-radius: 16px;
   }
 }
 
 .clubs {
   padding: 10px 16px;
-  background: linear-gradient(180deg, rgba(232, 59, 53, 0), rgba(232, 59, 53, 0.1));
-  border-color: var(--primary-other-84, rgba(232, 59, 53, 0.84));
+  background: linear-gradient(
+    180deg,
+    rgb(232 59 53 / 0%),
+    rgb(232 59 53 / 10%)
+  );
+  border-color: var(--primary-other-84, rgb(232 59 53 / 84%));
 }
 
 .ratings {
   padding: 10px 16px;
-  background: linear-gradient(180deg, rgba(227, 134, 26, 0), rgba(227, 134, 26, 0.1));
-  border-color: var(--yellow-other-84, rgba(227, 134, 26, 0.84));
+  background: linear-gradient(
+    180deg,
+    rgb(227 134 26 / 0%),
+    rgb(227 134 26 / 10%)
+  );
+  border-color: var(--yellow-other-84, rgb(227 134 26 / 84%));
 }
 
 .cities {
   padding: 10px 16px;
-  background: linear-gradient(180deg, rgba(0, 154, 138, 0), rgba(0, 154, 138, 0.1));
-  border-color: var(--secondary-other-84, rgba(0, 154, 138, 0.84));
+  background: linear-gradient(
+    180deg,
+    rgb(0 154 138 / 0%),
+    rgb(0 154 138 / 10%)
+  );
+  border-color: var(--secondary-other-84, rgb(0 154 138 / 84%));
 }
 
 .h3 {
@@ -59,31 +72,31 @@
 }
 
 .red {
-  color: #D33832;
+  color: #d33832;
 }
 
 .yellow {
-  color: #E3861A;
+  color: #e3861a;
 }
 
 .green {
-  color: #009A8A;
+  color: #009a8a;
 }
 
-@media (min-width: 768px) {
+@media (width >= 768px) {
   .h3 {
     font-size: 20px;
   }
 }
 
 .count {
+  z-index: 2;
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
-  z-index: 2;
 }
 
-@media (min-width: 768px) {
+@media (width >= 768px) {
   .count {
     font-size: 44px;
   }
@@ -101,22 +114,29 @@
 }
 
 .item {
-  height: 66px;
   width: 66px;
-  border-radius: 0 0 8px 8px;
-  text-align: center;
-  border: dashed 1px rgba(255, 255, 255, 0.32);
-  border-top: none;
-  background: linear-gradient(180deg, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.1));;
+  height: 66px;
   padding-top: 8px;
+
+  text-align: center;
+
+  background: linear-gradient(
+    180deg,
+    rgb(255 255 255 / 0%),
+    rgb(255 255 255 / 10%)
+  );
+  border: dashed 1px rgb(255 255 255 / 32%);
+  border-top: none;
+  border-radius: 0 0 8px 8px;
 }
 
 .text {
+  margin-bottom: 12px;
+
   font-size: 12px;
   font-weight: 400;
   font-style: italic;
-  color: rgba(255, 255, 255, 0.32);
-  margin-bottom: 12px;
+  color: rgb(255 255 255 / 32%);
 }
 
 .img {
