--- a/src/shared/home-stats/home-stats.module.css
+++ b/src/shared/home-stats/home-stats.module.css
@@ -1,13 +1,7 @@
 .container {
   display: flex;
   flex-direction: column;
-  gap: 12px;
-  padding-top: 24px;
-}
-
-.main {
-  display: flex;
-  gap: 16px;
+  gap: 28px;
 }
 
 .link {
@@ -19,14 +13,15 @@
   flex-direction: column;
   justify-content: space-evenly;
 
-  width: 100px;
-  height: 100px;
+  width: 120px;
+  height: 80px;
 
   border-style: solid;
   border-width: 1px;
   border-radius: 8px;
 }
 
+/* 
 @media (width >= 768px) {
   .link {
     width: 140px;
@@ -34,7 +29,7 @@
     border-width: 2px;
     border-radius: 16px;
   }
-}
+} */
 
 .clubs {
   padding: 10px 16px;
