--- a/src/shared/home-stats/home-stats.module.css
+++ b/src/shared/home-stats/home-stats.module.css
@@ -1,6 +1,5 @@
 .container {
   display: flex;
-  flex-direction: column;
   gap: 28px;
 }
 
@@ -13,7 +12,7 @@
   flex-direction: column;
   justify-content: space-evenly;
 
-  width: 120px;
+  width: 240px;
   height: 80px;
 
   border-style: solid;
@@ -87,15 +86,16 @@
 .count {
   z-index: 2;
   font-size: 32px;
-  font-weight: 900;
-  font-style: italic;
+  font-weight: 700;
+
+  /* font-style: italic; */
 }
 
-@media (width >= 768px) {
+/* @media (width >= 768px) {
   .count {
     font-size: 44px;
   }
-}
+} */
 
 .icon {
   position: absolute;
