--- a/src/views/home/categories-list/category/category.module.css
+++ b/src/views/home/categories-list/category/category.module.css
@@ -1,7 +1,7 @@
 .container {
   display: flex;
   flex-direction: column;
-  gap: 16px;
+  gap: 12px;
 
   width: 100%;
   height: 500px;
@@ -14,4 +14,22 @@
 .h3 {
   padding: 12px 0;
   font-size: 32px;
+}
+
+.more {
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  height: 56px;
+
+  font-size: 20px;
+
+  background-color: rgb(255 255 255 / 12%);
+  border-radius: 16px;
+}
+
+.more:hover {
+  background-color: rgb(255 255 255 / 32%);
 }
