--- a/src/shared/selected/selected.module.css
+++ b/src/shared/selected/selected.module.css
@@ -45,8 +45,15 @@
 }
 
 .imgStandard {
+  cursor: pointer;
   overflow: hidden;
   height: 28px;
+}
+
+.imgStandard:hover {
+  box-shadow:
+    rgb(0 0 0 / 16%) 0 1px 4px,
+    rgb(230 230 230) 0 0 0 3px;
 }
 
 .controls {
