--- a/src/shared/stats/stats.module.css
+++ b/src/shared/stats/stats.module.css
@@ -3,14 +3,17 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  border-radius: 14px;
-  border: 1px solid var(--neutral-left-12, rgba(255, 255, 255, 0.12));
+
   padding: 8px 14px;
+
   font-size: 16px;
   font-weight: 600;
+
+  border: 1px solid var(--neutral-left-12, rgb(255 255 255 / 12%));
+  border-radius: 14px;
 }
 
-@media (min-width: 768px) {
+@media (width >= 768px) {
   .container {
     /* font-size: ; */
   }
@@ -23,18 +26,20 @@
 
 .content {
   display: flex;
-  align-items: center;
   gap: 12px;
+  align-items: center;
 }
 
 .text {
   display: flex;
-  align-items: center;
   gap: 8px;
+  align-items: center;
 }
 
 .count {
   font-size: 12px;
-  color: var(--neutral-left-68, rgba(255, 255, 255, 0.68));
-  font-feature-settings: 'clig' off, 'liga' off;
+  font-feature-settings:
+    'clig' off,
+    'liga' off;
+  color: var(--neutral-left-68, rgb(255 255 255 / 68%));
 }
