--- a/src/views/home/categories-list/categories-list.module.css
+++ b/src/views/home/categories-list/categories-list.module.css
@@ -1,14 +1,44 @@
 .container {
   display: flex;
   flex-direction: column;
+  gap: 12px;
+  width: 100%;
+}
+
+.list {
+  display: flex;
+  flex-direction: column;
   gap: 16px;
   width: 100%;
 }
 
 @media (width >= 768px) {
-  .container {
+  .list {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(430px, 1fr));
     grid-template-rows: minmax(200px, 1fr);
   }
+}
+
+.loadMore {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 100%;
+  height: 56px;
+
+  font-size: 20px;
+  font-weight: 700;
+
+  background-color: var(--grey);
+  border-radius: 16px;
+}
+
+.loadMore:hover {
+  background-color: var(--grey-hover);
+}
+
+.allLoaded {
+  display: flex;
 }
