--- a/src/shared/header/header.module.css
+++ b/src/shared/header/header.module.css
@@ -1,6 +1,27 @@
 .container {
   position: absolute;
+
   display: flex;
+  align-items: center;
+
   width: 100%;
-  height: 96px;
+  max-width: 1240px;
+  height: 72px;
+  padding: 0 20px;
+
+  font-size: 18px;
+  font-weight: 700;
+
+  background-color: rgb(18 19 20 / 84%);
+  border-radius: 0 0 20px 20px;
+}
+
+.list {
+  display: flex;
+}
+
+.item {
+  display: flex;
+  height: 100%;
+  padding: 0 16px;
 }
