--- a/src/views/all/all.module.css
+++ b/src/views/all/all.module.css
@@ -5,5 +5,10 @@
   align-items: center;
 
   width: 100%;
-  padding: 100px 20px 20px;
+  padding: 20px;
+}
+
+.smallHero {
+  display: flex;
+  height: 100px;
 }
