--- a/src/shared/load-more/load-more.module.css
+++ b/src/shared/load-more/load-more.module.css
@@ -1,5 +1,4 @@
-.container {
-  overflow: hidden;
+.loadMore {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -8,11 +7,16 @@
   height: 56px;
 
   font-size: 20px;
+  font-weight: 700;
 
-  background-color: rgb(255 255 255 / 12%);
+  background-color: var(--grey);
   border-radius: 16px;
 }
 
-.container:hover {
-  background-color: rgb(255 255 255 / 32%);
+.loadMore:hover {
+  background-color: var(--grey-hover);
+}
+
+.allLoaded {
+  display: flex;
 }
