--- a/src/shared/pagination/pagination.module.css
+++ b/src/shared/pagination/pagination.module.css
@@ -2,123 +2,15 @@
   display: flex;
   gap: 12px;
   width: 100%;
-
   border-radius: 16px;
 }
 
-.container:hover {
-  /* background-color: var(--box-shadow-slight); */
-}
-
-.badgeImaContainer {
-  position: relative;
+.paginationButtons {
   display: flex;
-  width: 200px;
-  height: 20px;
 }
 
-.badge {
+.paginationButton {
   display: flex;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-}
-
-.imgStandard {
-  cursor: pointer;
-  overflow: hidden;
-  height: 56px;
-  border-radius: 16px;
-}
-
-.imgStandard:hover {
-  box-shadow:
-    rgb(0 0 0 / 16%) 0 1px 4px,
-    rgb(230 230 230) 0 0 0 3px;
-}
-
-.add {
-  cursor: pointer;
-
-  display: flex;
-  gap: 12px;
-  align-items: center;
-  justify-content: space-between;
-
-  width: 100%;
-  height: 56px;
-
-  border-radius: 16px;
-}
-
-.add:hover .imgStandard {
-  box-shadow:
-    rgb(0 0 0 / 16%) 0 1px 4px,
-    rgb(230 230 230) 0 0 0 3px;
-}
-
-.add:active {
-  /* scale: 0.98; */
-
-  /* height: 95%;/ */
-}
-
-.addBtn {
-  aspect-ratio: 1;
-  height: 100%;
-  background-color: var(--green);
-  border-radius: 16px;
-}
-
-.add:hover .addBtn {
-  background-color: var(--green-hover);
-}
-
-.moreBtn {
-  cursor: pointer;
-
-  flex-shrink: 0;
-
-  aspect-ratio: 1;
-  height: 56px;
-
+  padding: 16px;
   background-color: var(--grey);
-  border-radius: 16px;
-
-  /* background-color: rgb(107 107 107); */
-}
-
-.moreBtn:hover {
-  background-color: var(--grey-hover);
-}
-
-.added {
-  background-color: var(--red);
-}
-
-.selected {
-  aspect-ratio: 1;
-  height: 100%;
-  background-color: var(--red);
-  border-radius: 16px;
-}
-
-.add:hover .selected {
-  background-color: var(--red-hover);
-}
-
-.addIcon {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.selectedIcon {
-  transform: rotate(45deg);
-}
-
-.selectedIcon:hover {
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
