--- a/src/shared/pinined/pinned.module.css
+++ b/src/shared/pinined/pinned.module.css
@@ -3,9 +3,10 @@
 
   position: fixed;
   z-index: 10;
-  top: 20px;
-  left: 50%;
-  transform: translateX(-50%);
+  right: 20px;
+  bottom: 20px;
+
+  /* transform: translateX(-50%); */
 
   overflow: hidden;
   display: flex;
